force-app/main/default/objects/Contenido_Importacion_Agente__c/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <label>Cantidad</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>