force-app/main/default/objects/Contenido_Importacion_Agente__c/fields/Importacion_Agente__c.field-meta.xml
<CustomField>
    <fullName>Importacion_Agente__c</fullName>
    <label>Importación Agente</label>
    <referenceTo>Solicitud_de_Pickup__c</referenceTo>
    <relationshipLabel>Contenidos Importación Agente</relationshipLabel>
    <relationshipName>Contenidos_Importaci_n_Agente</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>