force-app/main/default/objects/Contenido_Importacion_Agente__c/fields/Pais_de_Fabricacion__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_Fabricacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País de Fabricación</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Contenidos Importación Agente</relationshipLabel>
    <relationshipName>Contenidos_Importaci_n_Agente</relationshipName>
    <type>Lookup</type>
</CustomField>