force-app/main/default/objects/Contenido_Importacion_Agente__c/fields/Valor_Unitario__c.field-meta.xml
<CustomField>
    <fullName>Valor_Unitario__c</fullName>
    <label>Valor Unitario</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>